more fixtures added with restaurants, some minor fixes, res list page started, authentication enabled with fixture admin, form for restaurant creation added

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,4 +3,4 @@
 #    controller: App\Controller\DefaultController::index
 # home:
 #     path: /home
-#     controller: App\Controller\MainController::restourantList
+#     controller: App\Controller\MainController::restaurantList
